tests/NormalTests/paczka1/fuzzy1/82087188.err
Error in line 11: aYKxXcC4Qd0 A140 54,93
Error in line 15: A140 S884 14,0
Error in line 4: DU9QttEB4D A140 47,2
Error in line 37: aYKxXcC4Qd0 324 210,0
Error in line 35: aYKxXcC4Qd0 A324 42,6
